+Demand calculate route, select carrier

--- a/KLS_WEB/KLS_WEB/Views/Route/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Route/Index.cshtml
@@ -46,8 +46,7 @@
         $(document).ready(function () {
             loadCity();
             loadState();
-            setTimeout(() =>
-                loadTable(), 500);
+            setTimeout(() => loadTable(), 500);
         });
 
         function AddEdit(id, idgenerado, button) {
